# ghc-bslit-linter

./: .gitignore  LICENSE.MPL-2.0  LICENSE_NOTICE.md  README.md  cabal.project  ghc-bslit-linter.cabal
.github/workflows/: haskell.yml
example/: Main.hs  plugin-example.cabal
src/GHC/Plugin/: BSLitLinter.hs
src/GHC/Plugin/BSLitLinter/: Internal.hs  Util.hs
